# KeyPiano

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: Vst3.cmake  strip_qt_pdb.cmake
docs/: build.md  kps-format-spec.md  project-structure.md
plan/: PLAN_DETAIL.txt  README_START_HERE.txt  TASKS.md  项目结构说明.txt
resources/: keypiano.qrc
resources/icons/: gen_toolbar_icons.py
resources/keymaps/: default.map
resources/soundfonts/: 41234.kps  default_piano.sf2  gen_default_piano.py
src/: main.cpp
src/core/: CMakeLists.txt  core_placeholder.cpp
src/core/audio/: AudioCallback.cpp  AudioCallback.h  AudioEngine.cpp  AudioEngine.h  LockFreeQueue.h  MidiEvent.h
src/core/config/: AppConfig.cpp  AppConfig.h  CfgParser.cpp  CfgParser.h
src/core/export/: WavExporter.cpp  WavExporter.h  WavWriter.cpp  WavWriter.h
src/core/keymap/: KeyMap.cpp  KeyMap.h  KeyMapParser.cpp  KeyMapParser.h  KeyMapSerializer.cpp  KeyMapSerializer.h
src/core/midi/: MidiInput.cpp  MidiInput.h
src/core/platform/: KeyboardHook.h
src/core/platform/win32/: Win32KeyboardHook.cpp  Win32KeyboardHook.h
src/core/recorder/: KpsFormat.cpp  KpsFormat.h  Recorder.cpp  Recorder.h
src/core/synth/: FluidSynthEngine.cpp  FluidSynthEngine.h  IPluginEditor.h  InstrumentRestore.h  SynthFactory.cpp  SynthFactory.h  SynthesizerBase.h  Vst3SynthEngine.cpp  Vst3SynthEngine.h
src/ui/: CMakeLists.txt  HelpContent.cpp  HelpContent.h  I18n.cpp  I18n.h  KeymapController.cpp  KeymapController.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RecordingController.cpp  RecordingController.h  SynthController.cpp  SynthController.h
src/ui/bridge/: AudioBridge.cpp  AudioBridge.h
src/ui/dialogs/: KeyMapEditorDialog.cpp  KeyMapEditorDialog.h  SettingsDialog.cpp  SettingsDialog.h  SoundFontDialog.cpp  SoundFontDialog.h
src/ui/widgets/: KeyboardOverlayWidget.cpp  KeyboardOverlayWidget.h  PedalIndicatorWidget.cpp  PedalIndicatorWidget.h  PianoWidget.cpp  PianoWidget.h  Vst3EditorWindow.cpp  Vst3EditorWindow.h
tests/: CMakeLists.txt  test_audio_callback.cpp  test_audio_engine.cpp  test_cfg_parser.cpp  test_instrument_restore.cpp  test_keymap_parser.cpp  test_kps_format.cpp  test_lockfree_queue.cpp  test_midi_decode.cpp  test_recorder.cpp  test_wav_writer.cpp
